changes in code

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       <button class="sign-up">Sign Up</button>
     </div>
   </header>
+<ul>
+  <li>i am a boy</li>
+  <li>i am a boy</li>
+</ul>
+
 </body>
 
 </html>
